Design fix on mobile (no margin)

--- a/docs/assets/css/styles.css
+++ b/docs/assets/css/styles.css
@@ -23,7 +23,7 @@
 }
 
 .content>.container {
-  padding: 30px 0;
+  padding: 30px 20px;
 }
 
 .content {
